Wed Jul 30 13:14:34 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/ImplRepo_Service/Shared_Backing_Store.cpp:
          fix a VMS compile error.

Mon Jul 28 20:39:57 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/ImplRepo_Service/AsyncAccessManager.cpp:
        * orbsvcs/ImplRepo_Service/AsyncListManager.h:
        * orbsvcs/ImplRepo_Service/AsyncListManager.cpp:
          Further enforcement of the principal of at most one server for non
          per-client mode servers. If a ping returns a status of DEAD but
          the locator holds a non-zero pid, then the server is treated the
          same as a transient, being considered ALIVE_MAYBE.

Mon Jul 28 13:59:12 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/POA/Persistent_ID/client.cpp:
          Fix the reporting of an expected exception so it is not recorded
          as an error.

Fri Jul 25 21:04:25 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/tests/ImplRepo/double_start/double_start.mpc:
          add a missed dependency.

Thu Jul 24 21:42:52 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/ImplRepo_Service/ImR_Locator_i.h:
        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:
        * orbsvcs/ImplRepo_Service/Shared_Backing_Store.cpp:
          Address the scenario where a server IOR is picked up on
          a refresh from the persistent store to ensure the timeout
          policy is applied. Also cleaned up previous commit's
          temporary fix, it is the right thing to do.

        * orbsvcs/tests/ImplRepo/double_start/Test_i.cpp:
        * orbsvcs/tests/ImplRepo/double_start/client.cpp:
        * orbsvcs/tests/ImplRepo/double_start/double_start.mpc:
        * orbsvcs/tests/ImplRepo/double_start/run_test.pl:
        * orbsvcs/tests/ImplRepo/double_start/server.cpp:
        * bin/tao_other_tests.lst:
          Added a sub-test for the case where the target server is hung